# NetoTCP

./: CMakeLists.txt  libio.cppm
entities/: INet.hpp
entities/declaration/: TCP_server.hpp  Tcp_client.hpp
entities/realization/: TCP_server.cpp  Tcp_client.cpp
firstTask/: main.cpp
